# servitor

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
data/: Config.toml  db.db
src/: main.rs
src/commands/: basic.rs  basic_member.rs  mod.rs  sudo.rs
src/config/: mod.rs  setup.rs
src/db/: queries.rs
src/frameworks/: framework.rs  mod.rs
src/global/: mod.rs  shared.rs
src/handlers/: handler.rs  mod.rs
src/server/: mod.rs
src/server/commands/: mod.rs  repl.rs  sudo.rs
src/utilities/: db.rs  logging.rs  mod.rs
