[package]
name = "servitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework", "framework"] }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
serde = "1.0"