[package]
name = "servitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework", "framework", "cache"] }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
chrono = "0.4"
lazy_static = "1.4.0"
envy = "0.4.2"
tokio-postgres = "0.7.5"
futures = "0.3.21"